@@ -35,7 +35,8 @@ on GitHub.
 [[release-notes-5.13.1-junit-jupiter-bug-fixes]]
 ==== Bug Fixes
 
-* ❓
+* Fix support for `AnnotationBasedArgumentsProvider` implementations that override the
+  deprecated `provideArguments(ExtensionContext, Annotation)` method.
 
 [[release-notes-5.13.1-junit-jupiter-deprecations-and-breaking-changes]]
 ==== Deprecations and Breaking Changes
